<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context="xdsopl.robot36.MainActivity">
	<item
		android:id="@+id/action_toggle_mode"
		android:icon="@drawable/baseline_auto_mode_24"
		android:title="@string/toggle_mode"
		app:iconTint="@color/tint"
		app:showAsAction="always" />
	<item
		android:id="@+id/action_store_scope"
		android:icon="@drawable/baseline_save_alt_24"
		android:title="@string/store_scope"
		app:iconTint="@color/tint"
		app:showAsAction="always"
		tools:ignore="AlwaysShowAction" />
	<item
		android:id="@+id/menu_item_share"
		android:title="@string/share"
		app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"
		app:showAsAction="always" />
	<item android:title="@string/lock_mode">
		<menu>
			<item android:title="@string/robot_modes">
				<menu>
					<item
						android:id="@+id/action_force_robot36_color"
						android:title="@string/robot36_color" />
					<item
						android:id="@+id/action_force_robot72_color"
						android:title="@string/robot72_color" />
				</menu>
			</item>
			<item android:title="@string/pd_modes">
				<menu>
					<item
						android:id="@+id/action_force_pd50"
						android:title="@string/pd50" />
					<item
						android:id="@+id/action_force_pd90"
						android:title="@string/pd90" />
					<item
						android:id="@+id/action_force_pd120"
						android:title="@string/pd120" />
					<item
						android:id="@+id/action_force_pd160"
						android:title="@string/pd160" />
					<item
						android:id="@+id/action_force_pd180"
						android:title="@string/pd180" />
					<item
						android:id="@+id/action_force_pd240"
						android:title="@string/pd240" />
				</menu>
			</item>
			<item android:title="@string/martin_modes">
				<menu>
					<item
						android:id="@+id/action_force_martin1"
						android:title="@string/martin1" />
					<item
						android:id="@+id/action_force_martin2"
						android:title="@string/martin2" />
				</menu>
			</item>
			<item android:title="@string/scottie_modes">
				<menu>
					<item
						android:id="@+id/action_force_scottie1"
						android:title="@string/scottie1" />
					<item
						android:id="@+id/action_force_scottie2"
						android:title="@string/scottie2" />
					<item
						android:id="@+id/action_force_scottie_dx"
						android:title="@string/scottie_dx" />
				</menu>
			</item>
			<item android:title="@string/wraase_modes">
				<menu>
					<item
						android:id="@+id/action_force_wraase_sc2_180"
						android:title="@string/wraase_sc2_180" />
				</menu>
			</item>
			<item
				android:id="@+id/action_force_raw_mode"
				android:title="@string/raw_mode" />
			<item
				android:id="@+id/action_auto_mode"
				android:title="@string/auto_mode" />
		</menu>
	</item>
	<item android:title="@string/audio_settings">
		<menu>
			<item android:title="@string/sample_rate">
				<menu>
					<group android:checkableBehavior="single">
						<item
							android:id="@+id/action_set_record_rate_8000"
							android:title="@string/rate_8000" />
						<item
							android:id="@+id/action_set_record_rate_16000"
							android:title="@string/rate_16000" />
						<item
							android:id="@+id/action_set_record_rate_32000"
							android:title="@string/rate_32000" />
						<item
							android:id="@+id/action_set_record_rate_44100"
							android:title="@string/rate_44100" />
						<item
							android:id="@+id/action_set_record_rate_48000"
							android:title="@string/rate_48000" />
					</group>
				</menu>
			</item>
			<item android:title="@string/channel_select">
				<menu>
					<group android:checkableBehavior="single">
						<item
							android:id="@+id/action_set_record_channel_default"
							android:title="@string/channel_default" />
						<item
							android:id="@+id/action_set_record_channel_first"
							android:title="@string/channel_first" />
						<item
							android:id="@+id/action_set_record_channel_second"
							android:title="@string/channel_second" />
						<item
							android:id="@+id/action_set_record_channel_summation"
							android:title="@string/channel_summation" />
						<item
							android:id="@+id/action_set_record_channel_analytic"
							android:title="@string/channel_analytic" />
					</group>
				</menu>
			</item>
			<item android:title="@string/audio_source">
				<menu>
					<group android:checkableBehavior="single">
						<item
							android:id="@+id/action_set_source_default"
							android:title="@string/source_default" />
						<item
							android:id="@+id/action_set_source_microphone"
							android:title="@string/source_microphone" />
						<item
							android:id="@+id/action_set_source_camcorder"
							android:title="@string/source_camcorder" />
						<item
							android:id="@+id/action_set_source_voice_recognition"
							android:title="@string/source_voice_recognition" />
						<item
							android:id="@+id/action_set_source_unprocessed"
							android:title="@string/source_unprocessed" />
					</group>
				</menu>
			</item>
		</menu>
	</item>
	<item android:title="@string/night_mode">
		<menu>
			<item
				android:id="@+id/action_enable_night_mode"
				android:title="@string/enable" />
			<item
				android:id="@+id/action_disable_night_mode"
				android:title="@string/disable" />
		</menu>
	</item>
	<item
		android:id="@+id/action_privacy_policy"
		android:title="@string/privacy_policy" />
	<item
		android:id="@+id/action_about"
		android:title="@string/about" />
</menu>